tests/ui/borrowck/borrow-raw-address-of-deref-mutability.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrow-raw-address-of-deref-mutability.rs:8:13
   |
LL |     let q = &raw mut *x;
   |             ^^^^^^^^^^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
   = help: `&raw mut *x` is of type `&i32`, which is an immutable reference
help: consider changing this to be a mutable reference
   |
LL |     let x = &mut 0;
   |              +++

error[E0596]: cannot borrow `*x` as mutable, as it is behind a `*const` pointer
  --> $DIR/borrow-raw-address-of-deref-mutability.rs:14:13
   |
LL |     let q = &raw mut *x;
   |             ^^^^^^^^^^^ `x` is a `*const` pointer, so the data it refers to cannot be borrowed as mutable
   |
   = help: `&raw mut *x` is of type `*const i32`, which is an immutable reference
help: consider changing this to be a mutable pointer
   |
LL |     let x = &mut 0 as *const i32;
   |              +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
